<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/pink_gradient">


    <LinearLayout
        android:id="@+id/a_timer_linear_layout_v_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/timer_set_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/upper_set"
            android:textColor="@color/colorWhiteTransparent50"
            android:textSize="34sp"
            android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/timer_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/colorWhite"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/timer_stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/upper_work_it"
            android:textColor="@color/colorWhiteTransparent50"
            android:textSize="34sp"
            android:paddingTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/a_timer_linear_layout_v_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="200dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/button_replay"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_replay_24px"
            android:contentDescription="@string/desc_replay" />


        <ImageView
            android:id="@+id/button_play_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_play_24px"
            android:contentDescription="@string/desc_pause_play"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:id="@+id/button_stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_stop_24px"
            android:contentDescription="@string/desc_pause_play" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>